# pci-id-parser

./: .gitignore  Cargo.toml  README.md  patch.diff  update.sh
.github/workflows/: codecov.yml
benches/: parse.rs
src/: error.rs  lib.rs  parser.rs  schema.rs
tests/: classes.rs  devices.rs
